# metaval

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
scripts/: install.sh
src/: cli.rs  error.rs  extract.rs  main.rs  model.rs  progress.rs  report.rs
src/fetch/: chrome.rs  http.rs  mod.rs
src/validate/: baseline.rs  hreflang.rs  images.rs  mod.rs  opengraph.rs  schema_org.rs  twitter.rs
