[package]
name = "metaval"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
authors = ["maxischmaxi"]
description = "Fast CLI to validate a web page's SEO metadata: meta tags, Open Graph, Twitter Cards, schema.org/JSON-LD, hreflang, canonical and indexability — with JSON output and CI-friendly exit codes."
documentation = "https://github.com/maxischmaxi/metaval#readme"
homepage = "https://github.com/maxischmaxi/metaval"
repository = "https://github.com/maxischmaxi/metaval"
readme = "README.md"
license = "MIT"
keywords = ["seo", "metadata", "open-graph", "validator", "cli"]
categories = ["command-line-utilities", "web-programming"]

[dependencies]
anyhow = "1.0.103"
chromiumoxide = "0.9.1"
clap = { version = "4.6.1", features = ["derive"] }
futures = "0.3.32"
owo-colors = "4.3.0"
reqwest = { version = "0.13.4", default-features = false, features = ["rustls", "gzip", "charset", "http2", "json"] }
scraper = "0.27.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
url = "2.5.8"

[profile.release]
# Strip symbols from release builds for smaller distributable binaries.
strip = true
